--- a/package.json
+++ b/package.json
@@ -18,7 +18,21 @@
     "hubot-redis-brain": "0.0.2",
     "hubot-scripts": "~2.5.16",
     "hubot": "~2.9.0",
-    "hubot-irc": "~0.2.7"
+    "hubot-irc": "~0.2.7",
+	"hubot-plusplus":">= 0.0.0",
+	"hubot-victory":">= 0.0.0",
+	"hubot-thank-you":">= 0.0.0",
+	"hubot-motivate":">= 0.0.0",
+	"hubot-tell":">= 0.0.0",
+	"hubot-seen":">= 0.0.0",
+	"hubot-reaction":">= 0.0.0",
+	"hubot-euphemism":">= 0.0.0",
+	"hubot-fliptable":">= 0.0.0",
+	"hubot-calculator":">= 0.0.0",
+	"hubot-humanity":">= 0.0.0",
+	"hubot-seriouslyguys":">= 0.0.0",
+	"hubot-dogeme":">= 0.0.0",
+	"hubot-what-the-fox":">= 0.0.0"
   },
   "engines": {
     "node": "0.10.x"
