add a bunch of scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "author": "Jim Cortez <jim@jimcortez.com>",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
-    "hubot-maps": "0.0.0",
+    "soupselect":">= 0.0.0",
+    "htmlparser":">= 0.0.0",
+    "scraper":">= 0.0.0",
+    "cheerio":">= 0.0.0",
+    "jsdom":">= 0.0.0",
+    "underscore":">= 0.0.0",
+    "hubot-maps": ">= 0.0.0",
     "hubot-help": "~0.1.1",
     "hubot-google-images": "~0.1.0",
     "hubot-youtube": "~0.1.2",
