upgrade to latest hubot

--- a/package.json
+++ b/package.json
@@ -11,20 +11,9 @@
     "cheerio":">= 0.0.0",
     "jsdom":">= 0.0.0",
     "underscore":">= 0.0.0",
-    "hubot-maps": ">= 0.0.0",
-    "hubot-help": "~0.1.1",
-    "hubot-google-images": "~0.1.0",
     "hubot-youtube": "~0.1.2",
     "hubot-diagnostics": "0.0.1",
-    "hubot-pugme": "~0.1.0",
-    "hubot-rules": "~0.1.0",
-    "hubot-heroku-keepalive": "0.0.4",
-    "hubot-google-translate": "~0.1.0",
-    "hubot-shipit": "~0.1.1",
-    "hubot-redis-brain": "0.0.2",
-    "hubot-scripts": "~2.5.16",
     "hubot": "~2.9.0",
-    "hubot-irc": "~0.2.7",
 	"hubot-plusplus":">= 0.0.0",
 	"hubot-victory":">= 0.0.0",
 	"hubot-thank-you":">= 0.0.0",
@@ -39,7 +28,18 @@
 	"hubot-seriouslyguys":">= 0.0.0",
 	"hubot-dogeme":">= 0.0.0",
 	"hubot-what-the-fox":">= 0.0.0",
-	"hubot-darts": "1.0.x"
+	"hubot-darts": "1.0.x,
+    "hubot-google-images": "^0.2.6",
+    "hubot-google-translate": "^0.2.0",
+    "hubot-help": "^0.1.2",
+    "hubot-heroku-keepalive": "^1.0.1",
+    "hubot-irc": "^0.2.8",
+    "hubot-maps": "0.0.2",
+    "hubot-pugme": "^0.1.0",
+    "hubot-redis-brain": "0.0.3",
+    "hubot-rules": "^0.1.1",
+    "hubot-scripts": "^2.16.2",
+    "hubot-shipit": "^0.2.0""
   },
   "engines": {
     "node": "0.10.x"
